cc_library(
    name = "bmi",
    srcs = [
        "bmi_interface.c",
        "bmi_port.c",
    ],
    hdrs = [
        "BMI/bmi_port.h",
        "bmi_interface.h",
    ],
    includes = ["."],
    local_defines = ["WITH_PCAP_FIX"],
    deps = ["@system_libs//:pcap"],
    visibility = ["//visibility:public"],
)
